feat: 요청 전송 성공 페이지 연결

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -142,6 +142,13 @@
     "footer": {
       "button": "Send Request",
       "notice": "Our concierge will contact you by email"
+    },
+    "requestType": {
+      "reservation": "Restaurant Reservation",
+      "takeout": "Takeout Order",
+      "delivery": "Delivery Order",
+      "hospital": "Hospital Appointment",
+      "info": "Information Check"
     }
   }
 }
