--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -150,5 +150,11 @@
       "hospital": "病院予約",
       "info": "情報確認"
     }
+  },
+  "review": {
+    "title": "ご協力をお願いいたします！",
+    "description": "現在、起業に向けてサービスのテストを行っております。貴重なお時間を割いてフィードバックをいただければ幸いです。厳しいご意見も温かいお言葉も、すべて私たちの大きな力になります。",
+    "button": "30秒で終わるアンケートに回答",
+    "close": "後で"
   }
 }
