--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -150,5 +150,11 @@
       "hospital": "医院挂号",
       "info": "信息查询"
     }
+  },
+  "review": {
+    "title": "我们需要您的帮助！",
+    "description": "我们正在测试此服务，为创业做准备。如果您能抽出一点时间分享您的反馈，我们将不胜感激。无论是批评还是肯定，对我们来说都非常有价值。",
+    "button": "参与 30 秒问卷",
+    "close": "以后再说"
   }
 }
