--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -65,7 +65,7 @@
         "desc": "駐車場、ペット同伴、営業時間などを確認します"
       },
       "hospital": {
-        "title": "病院予約",
+        "title": "診察予約",
         "desc": "診察や相談の予約スケジュールを調整します"
       },
       "pet": {
