--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -65,7 +65,7 @@
         "desc": "咨询停车场、宠物入内、营业时间 등"
       },
       "hospital": {
-        "title": "医院预约",
+        "title": "预约医生",
         "desc": "安排医疗预约或咨询"
       },
       "pet": {
