--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -118,8 +118,8 @@
       "label": "希望日時",
       "placeholder": "例：12月25日 午後7:00、2名"
     },
-    "preferredTime": {
-      "label": "ご希望の時間帯 (任意)",
+    "alternativeTime": {
+      "label": "他の都合がいい時間（他にあいている時間を教えてください）",
       "placeholder": "例：平日18時以降、または土日祝など"
     },
     "commonQuestions": {
