--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -174,6 +174,7 @@
     "searchDelivery": "Search Delivery Address",
     "placeholder": "Enter place or address",
     "noResults": "No results found",
-    "enterKeyword": "Eenter a keyword to search"
+    "enterKeyword": "Enter a keyword to search",
+    "manually": "Enter manually"
   }
 }
