Update description for step2 to include 'AI'

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,7 +12,7 @@
     },
     "step2": {
       "title": "We call them for you",
-      "desc": "Our concierge contacts the place in Korean"
+      "desc": "Our AI concierge contacts the place in Korean"
     },
     "step3": {
       "title": "Get confirmation by email",
